--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
+<html>
+<body bgcolor="D37AFF">
+<head>
+<H1><font color="FCE1E1">Folleto</font></H1>
+<center><img src ="2-hi-brawl-stars-acegif.gif" height="300"></center>
+  <li><a href="D:\Deivy Rivera\gif.html">TRIMESTRE 1 </a></li>
+</body>
+</html>
 
