--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <body bgcolor="D37AFF">
 <head>
 <H1><font color="FCE1E1">Folleto</font></H1>
-<center><img src ="2-hi-brawl-stars-acegif.gif" height="300"></center>
+<center><img src ="Folleto Tríptico Proyecto Creativo Infantil Ilustrado Doodle Multicolor.gif" height="500"></center>
   <li><a href="D:\Deivy Rivera\gif.html">TRIMESTRE 1 </a></li>
 </body>
 </html>
