--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <H1><font color="FCE1E1">Folleto</font></H1>
 <center><img src ="Folleto Tríptico Proyecto Creativo Infantil Ilustrado Doodle Multicolor.gif" height="500"></center>
-  <center><img src ="<center><img src =height"FCE1E1"="500"></center>" height="500"></center>
+  <center><img src ="<center><img src =height"2.png"="500"></center>" height="500"></center>
   <li><a href="D:\Deivy Rivera\gif.html">TRIMESTRE 1 </a></li>
 </body>
 </html>
